--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -25,17 +25,17 @@
 
 \begin{abstract}
 Could interacting mindreaders be in a position to know things which they would be unable to know if they were manifestly passive observers?
-This paper defends a positive answer.
+This paper argues that they could.
 Mindreading is sometimes reciprocal: 
 the mindreader's target reciprocates by taking the mindreader as a target for mindreading.
 The paper explains how such reciprocity can significantly narrow the range of possible interpretations of behaviour 
 where mindreaders are, or appear to be, in a position to interact.
 It follows that
 revisions and extensions 
-are needed for 
+are needed to 
 standard theories of mindreading
 on which
-all the evidence relevant to mindreading 
+all the evidence 
 is in principle available to manifestly passive mindreaders.
 The view also has consequences for 
 understanding 
@@ -44,6 +44,10 @@ may explain the emergence,
 in evolution or development,
 of sophisticated forms of social cognition.
 
+\
+
+\noindent
+Word count: 10 200
 
 %
 %What evidence grounds ascriptions of thoughts and actions,
@@ -76,7 +80,7 @@ of sophisticated forms of social cognition.
 \end{abstract}
 
 
-\section{Mindreading: the normative project}
+\section{A question about the evidential basis of mindreading}
 \label{sec:intro}
 
 Mindreading is
@@ -122,9 +126,9 @@ a purely passive mindreader observing from behind a one-way mirror
 is on a par with
 a mindreader who, actually or apparently, could interact with those she seeks to interpret.
 The two are on a par in this sense:
-in principle the same evidence could be available to each, and each can exploit the same principles in moving from evidence to ascriptions of thought.
-Of course none of these theories is incompatible with the idea that interaction might be useful for mindreading in practice.  
-The point is just that, on these theories, interaction makes no difference to the theory.
+in principle the same evidence could be available to each, and each can exploit the same principles in moving from evidence to ascriptions of thought and action.
+Of course these theories are all compatible with the idea that interaction might be useful for mindreading in practice.  
+But on these theories interaction makes no difference to what can in principle be known.
 In this paper we aim to show
 that mindreaders actually or apparently capable of interacting with their targets are at an advantage not only in practice but also in theory.
 Their ascriptions could rely on evidence and principles which would be unavailable if they were entirely passive observers.
@@ -137,7 +141,7 @@ It ought to be possible, in mindreading, to make use of this reciprocity.
 %of the fact that the mindreader's target reciprocates by taking the mindreader to be a target for mindreading.
 But how could such reciprocity facilitate mindreading?
 If we assume the mindreader is merely observing her target,
-that there is no potential for interaction,
+that there is manifestly no potential for interaction,
 then it seems that any way of exploiting reciprocity would involve higher-order ascriptions. 
 The mindreader would ascribe to her target beliefs (say) about the mindreader's own beliefs and other mental states.
 And if her target reciprocates, she might escalate by ascribing to the target beliefs about her own beliefs about the target's beliefs about her beliefs.
@@ -148,17 +152,17 @@ Reciprocal mindreading should sometimes result in
 something like a meeting of minds
 rather than
 an escalation of higher-order ascriptions.
-Perhaps, then, fully exploiting reciprocity in mindreading
-requires the mindreaders to be in a position to interact with each other.
-Perhaps in some cases 
+Perhaps fully exploiting reciprocity in mindreading
+requires the mindreaders to be in a position to interact with each other;
+perhaps in some cases 
 being or appearing poised to interact
-can somehow enable mindreaders to exploit reciprocity without first having to ascribe of higher-order mental states.
+can somehow enable mindreaders to exploit reciprocity without first having to ascribe higher-order mental states.
 This is the hunch we develop in what follows.
 
 
 Even if the hunch turns out to be right, why investigate it?
 One reason is that the investigation will enable us to revise and extend existing accounts of the evidential basis of mindreading  in ways that make them more accurate and comprehensive.
-Another motive concerns the emergence, in evolution and in development, of mindreading.
+Another motive concerns the emergence, in evolution or in development, of mindreading.
 Several researchers have offered quite general conjectures about how interaction might explain the emergence of sophisticated forms of cognition.
 One view is that needs to interact with others have driven and shaped some aspects of cognition.%
 \footnote{
@@ -169,7 +173,7 @@ and that
 }
 We shall not speak to this view here.
 Another view is that abilities to interact with others
-may have fostered the emergence in evolution---or, on a related view, in development---%
+may have fostered the emergence in evolution---or, on a different view, in development---%
 of sophisticated forms of cognition including social cognition and, in particular, mindreading.%
 \footnote{
 \citet[p.\ 1]{Moll:2007gu}
@@ -191,7 +195,7 @@ but also to
 Trading the risk of a minor misunderstanding for concision we use the term `interacting mindreader' to refer to both groups;
 similarly, references to mindreaders who `only observe' must be understood as excluding those who appear to their targets to be interaction partners.
 Only cases involving the first group---mindreaders who actually could interact---are likely to be of wider interest.
-Cases involving misleading appearances might be regarded as artefacts of the model.
+%Cases involving misleading appearances might be regarded as artefacts of the model.
 Any application of our claim to understanding evolution or development is bound to focus on cases where mindreaders actually could interact with their targets.
 
 A second qualification concerns the scope of mindreading.
@@ -207,11 +211,10 @@ Identifying these actions typically requires goal ascription.
 In some cases, then, 
 evidence for the ascription of a goal
 will indirectly support the ascription of a belief or other mental state---%
-the evidence will support the ascription of a goal to an action,
-and this ascription will in turn support the ascription of a belief (say) to the agent of the action.
-Accordingly, even those who deny that goal ascription is mindreading should agree that sometimes evidence for a goal ascription is indirectly evidence for the ascription of a belief or other mental state.
+the evidence will support  a goal ascription which will in turn support the ascription of a belief (say) to the agent of the action.
+Accordingly, even those who deny that goal ascription is mindreading should agree that sometimes evidence for goal ascription is indirectly evidence for ascription of belief and other mental states.
 So whether or not goal ascription is deemed to be mindreading,
-a mindreader's access to evidence for mindreading  depends in part on her access to evidence for goal ascription.
+an individual's access to evidence for mindreading  depends in part on her access to evidence for goal ascription.
 Our plan is to show that interacting mindreaders could make use, in ascribing goals, of evidence and principles which are not available to mere observers (who do not even appear to be in a position to interact with their targets).
 In doing this we will be showing that
 mindreaders who are (or appear) poised to interact with others 
@@ -224,8 +227,8 @@ which they might not otherwise be in a position to know.
 %because broadening the evidential basis will enable us to give a more accurate and comprehensive theory of mindreading.
 %And, as we shall argue, this in turn matters because it may bear on the possibility of explaining the emergence, in evolution or in development, of mindreading.
 
-Developing these ideas requires us to fill in some background on goal ascription and its limits, as well as on notions of goal-directed interactions.
-Readers impatient to get to the central idea should skip to section \vref{sec:your_goal_is_my_goal}.
+Developing these ideas requires us to fill in some background on goal ascription and its limits, as well as on notions of goal-directed interaction.
+Readers impatient to get to the central idea might skip to section \vref{sec:your_goal_is_my_goal}.
 
 
 
@@ -234,13 +237,15 @@ Purposive action is action directed to the realisation of one or more outcomes.
 Goal ascription is the process of identifying to which outcomes others' purposive actions are directed.
 To illustrate, suppose that
 Hannah kicks a ball thereby both preventing her sisters from scoring and also breaking a window.
-Asked about episode,
-Hannah might protest that the goal of her action was not to break the window but only to reverse the others' advance.
+Asked about the episode,
+Hannah might protest, truthfully, that the goal of her action was not to break the window but only to reverse the others' advance.
 As this illustrates,
 among the actual and possible outcomes of an action,
-only some are outcomes to which the action was directed.
-Goal ascription is the process of identifying from among an action's actual and possible outcomes
-those to which it is directed.
+only some are outcomes to which the action is directed.
+Goal ascription is the process of identifying 
+ those outcomes.
+%, among an action's actual and possible outcomes,
+%those to which it is directed.
 %Our immediate question is therefore, 
 %What evidence could support hypotheses about the outcomes to which actions are directed, 
 %and how would the evidence support the hypotheses?
@@ -262,7 +267,7 @@ By showing that
   interacting mindreaders may have access to 
   evidence for goal ascriptions 
   which is unavailable to those who merely observe,
-we may be able to indicate ways in which interaction could facilitate the emergence, in evolution or development, of more sophisticated forms of mindreading.%
+we will eventually be able to indicate ways in which interaction could facilitate the emergence, in evolution or development, of more sophisticated forms of mindreading.%
 \footnote{
 There are various ways of understanding the idea that mindreading may come in several forms, some less conceptually or cognitively demanding than others.
 For a range of views, see
@@ -286,14 +291,14 @@ For example,
 if you know or can guess that another agent's actions are directed to opening a nut,
 you may then be in a position to infer that the unfamiliar pattern of actions she is performing constitute a means to open nuts.
 %\citep{Horner:2005pj}
-In a different case, knowing the goal of another agent's actions may enable you to discover a new use for a tool.
+%In a different case, knowing the goal of another agent's actions may enable you to discover a new use for a tool.
 A slightly less familiar idea is that goal ascription enables one to learn from others' failures as well as their successes.
 For example, suppose that while you are searching for some peanuts 
 another agent attempts but fails to reach for a closed container.
 In some circumstances,
 if you know that the goal of the agent's action was to obtain the peanuts
 then you now have evidence as to where they might be.\footnote{
-\citet{hare_chimpanzees_2004} exploit this principle in testing chimpanzees' abilities to ascribe goals.
+\citet{hare_chimpanzees_2004} exploit this fact in testing chimpanzees' abilities to ascribe goals.
 }
 This is one illustration of how goal ascription could in principle enable us to learn from others' failures 
 (\citealp{Want:2001hp} offer another).
@@ -316,10 +321,12 @@ on the latter, see \citet{Liszkowski:2008al}.
 }
 
 Goal ascription is also instrumental for ascribing propositional attitudes.
-We have already mentioned that such ascriptions often involve 
+We have already mentioned 
+   (\vpageref*{goal_ascription_verify})
+that such ascriptions often involve 
 confirming predictions about actions 
-which in turn typically involves
-identify the goals of those actions (\vpageref*{goal_ascription_verify}).
+which in turn typically requires
+identifying the goals of those actions.
 In addition,
 knowing which outcomes an action is directed to may constrain hypotheses about what an agent intends 
 as well as
@@ -345,17 +352,16 @@ knowledge of the agents' intentions
 which in turn depends 
 on knowledge of their beliefs, desires and other mental states.
 If this claim were true,
-there would be no such thing as a theory of the evidential basis of goal ascription,
- only a theory of the evidential basis of mindreading more generally.
-
-The falsity of this claim seems to be assumed in both developmental and comparative research on goal ascription.%
+it would make no sense to discuss the evidential basis of goal ascription except in discussing the evidential basis of mindreading more generally.
+However,
+the falsity of this claim  is presupposed  in both developmental and comparative research on goal ascription.%
 \footnote{ 
 Compare \citet{Gergely:1995sq},
 	\citet{Woodward:1998dm} and
 	\citet{Penn:2007ey}
 among many others.
 }
-We know of no compelling reason for taking this claim to be true.
+And we know of no compelling reason for taking this claim to be true.
 After all,
 it is consistent with rejecting the claim to recognize that
  ascriptions of goals to actions
@@ -378,7 +384,7 @@ Even if she had no ability to ascribe mental states, it seems she might neverthe
 
 While not decisive,
 these considerations are perhaps sufficient to motivate 
-exploring what evidence might ground goal ascription.
+exploring what evidence might support goal ascription.
 According to 
 what Csibra and Gergely call `the principle of rational action':
 %
@@ -445,20 +451,25 @@ may jointly constitute defeasible evidence for the conclusion that:
 \end{enumerate}
 %
 We suggest that the above inference, from (1)-(5) to (6), is a route to knowledge of the goals of actions in this sense:
+in some cases
 it would be possible to know the premises without already knowing the conclusion;
 and, 
-in some cases knowing the premises could put one in a position to know the conclusion.%
+in some of those cases,
+knowing the premises could put one in a position to know the conclusion.%
 \footnote{
-Knowledge of the premises may not require explicit knowledge of what others find obvious, what is salient to them or what makes actions better for them.
+Knowledge of the premises may not require explicit knowledge of 
+	what is salient to others,
+	what is desirable to them,
+	or what makes actions better for them.
 It is arguably sufficient that
 the individual ascribing a goal 
 is entitled to 
 rely on being sufficiently similar to the target of her ascription 
 with respect to 
-	what she finds obvious, 
-	what makes one action a better or worse means of realising an outcome than another action for her,  
-	what is desirable to her,
-	and what is salient to her.
+these things.
+%	what makes one action a better or worse means of realising an outcome than another action for her,  
+%	what is desirable to her,
+%	and what is salient to her.
 }
 
 Why accept this?
@@ -528,7 +539,7 @@ In one case, someone uses a reamer to  juice  a lime; in the other, someone else
 Without communication, repetition or convention,
 an observer familiar with reamers but not lames 
 may be able to identify the goal of the first action only.
-As this illustrates, ignorance about to which ends actions are means can be an obstacle to goal ascription.%
+As this illustrates, ignorance about to which ends actions are means can be an obstacle to goal ascription.
 Call this the problem of opaque means.
 
 We are not suggesting that no observer could ever identify the goal of any action she fails to recognise as a means to achieving that goal.
@@ -593,13 +604,15 @@ this possibility illustrates how the problem of opaque means can be an obstacle 
 
 This, then, is the problem of opaque means:
 failures to identify to which ends actions are means can impair goal ascription.
-The problem is potentially a problem for mindreaders given the standard, purely observational models of mindreading.
-It is not our intention to suggest that the problem of opaque means is a problem \emph{for models of mindreading}.
-Rather, it is a potential problem \emph{for mindreaders}.
+The problem is potentially a problem for mindreaders given the standard, purely observational theories of mindreading.
+Note that it is not our intention to suggest that the problem of opaque means is a problem \emph{for theories of mindreading};
+what matters for our purposes is only that it is a potential problem \emph{for mindreaders}.
 
 That the problem of opaque means exists
-is the first premise in our argument
-that models of mindreading based on pure observation are less powerful than models taking into account the possibility of interaction.
+is the first step in our argument
+that 
+theories of the evidential basis of mindreading based on pure observation 
+are less powerful than theories taking into account the possibility of interaction.
 They are less powerful in this sense: 
 some routes to knowledge of the goals of actions are available only where a theory of the evidential basis of mindreading 
  takes the possibility of interaction into account.
@@ -621,7 +634,7 @@ That is the aim of this section.
 
 Let us stipulate that an outcome is a \emph{distributive goal} of two or more agents' actions just if two conditions are met.
 \label{df:distributive_goal}
-First, this outcome is a one to which each agent's actions are individually directed.
+First, this outcome is  one to which each agent's actions are individually directed.
 Second, each agent's actions are related to the outcome in such a way that it is possible for all the agents (not just any agent, all of them together) to succeed in bringing about this outcome.
 
 To illustrate,
@@ -825,14 +838,14 @@ Is it ever possible to know the premises without first knowing the conclusion?
 Consider the first premise.  
 Sometimes 
 in the right contexts
-an individual can recognize in another's facial expressions, engaging gestures or synchronized bodily movements that she is about to engage in joint action with him.
+an individual can recognize in another's facial expressions, engaging gestures or synchronized bodily movements that she is about to engage in joint action with her.
 Exploiting these indicators does not typically depend on knowing the particular contents of any beliefs, desires or goals.  
 Expressions, gestures and movements can naturally indicate imminent jointness in much the way thay can also naturally indicate emotions.\footnote{
 Ideas along these lines are suggested by the discussion of {emergent coordination} in \citet{Knoblich:2010fk}.
 }  
 Of course these indicators provide no guarantee that others are genuinely willing to engage in joint action.  
 But they are sufficiently reliable to ground knowledge in some cases.  
-The existence of such indicators shows that knowing the first  premise of the above inference does not require already knowing which particular goals the other has.  
+The existence of such indicators shows that knowing the first  premise of the above inference does not require already knowing which particular goals the other's actions will be directed to.  
 
 Not everything needs to rest on indicators, however.
 It is sometimes possible to know that others are willing to engage in joint action with you even without relying on such indicators.  
