added intention motor action (was svn, older revisions not imported but still in svn)

--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -1,16 +1,20 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 
-\documentclass[14pt,a4paper]{extarticle}
+\documentclass[12pt,a4paper]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
 
 \def \ititle {Interacting Mindreaders}
 \def \isubtitle {}
-\def \iauthor {Stephen A. Butterfill}
-\def \iemail{s.butterfill@warwick.ac.uk}
-%\date{}
+%\def \iauthor {Stephen A. Butterfill}
+%\def \iemail{s.butterfill@warwick.ac.uk}
+\def \iauthor {}
+\def \iemail{}
+\date{}
+
 
 \input{$HOME/Documents/submissions/preamble_steve_paper2}
+\author{}
 
 %\setromanfont[Mapping=tex-text]{Sabon LT Std} 
 
@@ -46,8 +50,8 @@ of sophisticated forms of social cognition.
 
 \
 
-\noindent
-Word count: 10 200
+%\noindent
+%Word count: 10 100
 
 %
 %What evidence grounds ascriptions of thoughts and actions,
@@ -80,7 +84,7 @@ Word count: 10 200
 \end{abstract}
 
 
-\section{A question about the evidential basis of mindreading}
+\section{On the evidential basis of mindreading}
 \label{sec:intro}
 
 Mindreading is
@@ -657,7 +661,7 @@ So this outcome is a distributive goal of our actions.
 %While all of our actions are directed to similar outcomes (they all involve pulling up the turnip),
 %these are clearly different outcomes.
 %They are clearly different because one could occur while another did not;
-%one of us might have broken an arm and been unable to pullwhile the others succeeded.
+%one of us might have broken an arm and been unable to pull while the others succeeded.
 %So in this case, freeing the turnip is not a distributive goal of our actions.
 %For some actions to have a distributive goal,
 %it is necessary that there be a single outcome (and not merely similar outcomes) to which they are directed.
@@ -840,7 +844,7 @@ Sometimes
 in the right contexts
 an individual can recognize in another's facial expressions, engaging gestures or synchronized bodily movements that she is about to engage in joint action with her.
 Exploiting these indicators does not typically depend on knowing the particular contents of any beliefs, desires or goals.  
-Expressions, gestures and movements can naturally indicate imminent jointness in much the way thay can also naturally indicate emotions.\footnote{
+Expressions, gestures and movements can naturally indicate imminent jointness in much the way they can also naturally indicate emotions.\footnote{
 Ideas along these lines are suggested by the discussion of {emergent coordination} in \citet{Knoblich:2010fk}.
 }  
 Of course these indicators provide no guarantee that others are genuinely willing to engage in joint action.  
@@ -1198,7 +1202,7 @@ your facial gestures signal willingness to engage in joint action with Ayesha.
 She then concludes, correctly, that your goal is her goal, to retrieve the cat.
 So despite the difference in belief,
 the possibility of interaction means that
-Ayesha can knowledgably identify the goal of your action.
+Ayesha can knowledgeably identify the goal of your action.
 
 Exploiting your-goal-is-my-goal does not make it possible to  avoid the problem of false belief entirely,
 it only shifts  the problem.
