started on talk

--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -1,20 +1,21 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 
-\documentclass[12pt,a4paper]{extarticle}
+\def \papersize {a4paper}
+\documentclass[12pt,\papersize]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
 
 \def \ititle {Interacting Mindreaders}
 \def \isubtitle {}
-%\def \iauthor {Stephen A. Butterfill}
-%\def \iemail{s.butterfill@warwick.ac.uk}
-\def \iauthor {}
-\def \iemail{}
+\def \iauthor {Stephen A. Butterfill}
+\def \iemail{s.butterfill@warwick.ac.uk}
+%\def \iauthor {}
+%\def \iemail{}
 \date{}
 
 
 \input{$HOME/Documents/submissions/preamble_steve_paper2}
-\author{}
+%\author{}
 
 %\setromanfont[Mapping=tex-text]{Sabon LT Std} 
 
