--- a/conf espp 2012 symposium false belief counterfactuals perspective schurz rafetseder/false beliefs, perspectives and counterfactuals espp 2012 symposium submission.tex
+++ b/conf espp 2012 symposium false belief counterfactuals perspective schurz rafetseder/false beliefs, perspectives and counterfactuals espp 2012 symposium submission.tex
@@ -7,7 +7,7 @@
 \documentclass[12pt,\papersize]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
 
-\def \ititle {False Beliefs, Perspectives and Counterfactuals}
+\def \ititle {Representing Beliefs, Perspectives and Counterfactuals: A Puzzle}
 \def \isubtitle {}
 \def \iauthor {Stephen A. Butterfill}
 \def \iemail{s.butterfill@warwick.ac.uk}
@@ -30,32 +30,56 @@
 
 \begin{abstract}
 \noindent
-***
+What is involved in representing belief?
+This talk starts with three claims that are separately defensible but appear to be jointly inconsistent: 
+%
+\begin{enumerate}
+\item Infants can represent false beliefs from around their first birthday or earlier. \label{infant_fb}
+%
+\item  \label{fb_is_perspectives}  Being able to represent false beliefs involves being able to  (i) process perspective differences or (ii) reason counterfactually (or both).
+%
+\item Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are at least one year old.  \label{infant_perspectives}
+%
+\end{enumerate}
+%
+The first part of the talk draws on research presented elsewhere in this symposium to  defend each claim in turn.
+If each of the three claims (1)-(3) is true, they cannot be inconsistent after all.
+The second part of the talk explores ways of avoiding inconsistency by distinguishing measurement schemes and representational systems. 
+There may be multiple ways of representing belief, 
+and different ways of representing belief may vary in how flexible they are and what their implementation requires.
+
 
 
 \end{abstract}
 
 
 \section{Introduction}
-The challenge is to understand what mindreading is, how it develops and which cognitive processes underpin it.
+The broader challenge is to understand what mindreading is, how it develops and which cognitive processes underpin it.
 One approach is to identify components of mindreading.
 As I understand it, Eva's and Matthias' research does just this.
 Eva argues that mindreading, at least insofar as it involves representing beliefs, may depend on counterfactual reasoning too.
-And Mattias supports the claim that mindreading involves a separable ability to process perspective differences by showing that the neural correlates of this ability are found in both mindreading and non-mindreading tasks.
+And Matthias supports the claim that mindreading involves a separable ability to process perspective differences by showing that the neural correlates of this ability are found in both mindreading and non-mindreading tasks.
 
-There appears to be a conflict between Eva's and Matthias' interpretations of their findings and a widely held view about infant mindreading (as Eva notes in the paper on which her talk is based).
-Here are three claims which are collectively inconsistent:
+Eva's and Matthias' interpretations of their findings each appear to be in conflict with 
+ a widely held view about infant mindreading, 
+  as Eva notes in the paper on which her talk is based.
+These three claims appear to be jointly inconsistent:
 %
 \begin{enumerate}
 \item Infants can represent false beliefs from around their first birthday or earlier. \label{infant_fb}
 
-\item Being able to represent false beliefs involves being able to  (i) process perspective differences or (ii) reason counterfactually (or both). \label{fb_is_perspectives}
+\item  \label{fb_is_perspectives}  Being able to represent false beliefs involves being able to  (i) process perspective differences or (ii) reason counterfactually (or both).\footnote{
+Here and below I'm save words by not carefully distinguishing 
+ developmental claims about what acquiring an ability to represent false belief requires (Eva's main concern)
+ from
+ cognitive claims about what exercising an ability to represent false belief requires (Matthias' main concern).
+}
 
 \item Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are at least one year old.  \label{infant_perspectives}
 
 \end{enumerate}
 %
-Since these claims are collectively inconsistent, we must reject at least one.  But which?
+Since these claims appear to be jointly inconsistent, it seems we must reject at least one.  But which?
 
 
 \section{The puzzle}
@@ -67,7 +91,7 @@ And in much the way that irrelevant facts about the contents of others’ belief
 The variety of paradigms measures---looking time, anticipatory looking, pointing and helping---makes it hard to dismiss these findings on methodological grounds.
 And while some have proposed that infants might be tracking behaviour only \citet{en_1168, en_1169},
 this proposal faces several objections \citep[e.g.][]{Song:2008qo}.
-The core issue is not whether hypothetical behavioural strategies might in principle explain theory of mind abilities; it is whether all of these subjects’ actual behaviour reading capacities are flexible enough to explain the full range of their theory of mind abilities \citep[]{en_1686}.
+The core issue is not whether hypothetical behavioural strategies might in principle explain theory of mind abilities; it is whether all of these subjects’ actual behaviour reading capacities are flexible enough to explain the full range of their theory of mind abilities \citep[]{Apperly:2009ju}
 In my view this is unlikely.
 So straightforward rejection of  (\ref{infant_fb}) is not an option.
 
@@ -77,13 +101,13 @@ claim (\ref{infant_perspectives}).
 
 Can we reject (\ref{infant_perspectives}), the claim that infants neither process perspective differences nor engage in counterfactual reasoning until they are at least one year old?
 One difficulty is that current developmental evidence almost uniformly supports this claim  \citep{rafetseder:2010_counterfactual,beck:2011_almost}.
-A second problem is that  abilities to reason counterfactually,%
+A second problem is that the development of abilities to reason counterfactually,%
 \footnote{Here and throughout I follow Eva Rafetseder in using the term `counterfactual reasoning'  to refer to reasoning which essentially involves comparing two possible situations; the term is sometimes used more broadly to include the sorts of representations involved in pretence.} 
-like abilities to represent false belief,
-appear to involve working memory and inhibitory control 
+like the development of abilities to represent false belief,
+appears to involve working memory and inhibitory control 
 (on counterfactuals: 
 	\citealp{drayton:2011_counterfactual,beck:2011_supporting};
-on false beliefs: \citealp{en_1412, en_1698, lin:2010_reflexively, en_1547} experiments 4-5).
+on false beliefs: \citealp{en_1412, en_1698}; \citealp{lin:2010_reflexively, en_1547} experiments 4-5; \citealp{saxe_reading_2006}).
 As even committed nativists are likely to agree, capacities for inhibitory control and working memory develop over several years and are limited in infants \citep[e.g.][]{carlson:2005_developmentally}.
 So we cannot straightforwardly reject (\ref{infant_perspectives}).
 
@@ -140,9 +164,9 @@ So the Extraneous Requirement cannot be straightforwardly linked to language or 
 There is a more general problem facing attempts to identify the Extraneous Requirement.
 There is much variation among the tasks in Category A.
 It is not just that some are verbal whereas others are nonverbal.
-It is also that some involve prediction whereas others involve retrodiction or justification \citep[e.g.]{Wimmer:1998kx},
-some concern the first-person perspective, whereas others involve a second- or third-person perspective \citep[e.g.]{Gopnik:1991db},
-some involve interaction whereas in others the subject is a mere observer \citep[e.g.]{Chandler:1989qa},
+It is also that some involve prediction whereas others involve retrodiction or justification \citep[e.g.][]{Wimmer:1998kx},
+some concern the first-person perspective, whereas others involve a second- or third-person perspective \citep[e.g.][]{Gopnik:1991db},
+some involve interaction whereas in others the subject is a mere observer \citep[e.g.][]{Chandler:1989qa},
 and some involve prediction actions whereas others involve predicting desires \citep{Astington:1991kk} or selecting an argument appropriate for someone with a false belief \citep{Bartsch:2000es}.
 Despite all this variation and more, the Category A tasks all appear to measure a developmental transition \citep{Wellman:2001lz}.
 This is a significant obstacle to identifying the Extraneous Requirement.
@@ -154,17 +178,180 @@ To sum up so far,
 I have suggested that there are good reasons for each of (1)-(3) and 
 argued that none of these claims can be straightforwardly rejected.
 This leads to a puzzle.
-Because (1)-(3) are collectively inconsistent, one of them must be rejected.
-The puzzle is: Which should we reject? 
+Because (1)-(3) appear to be jointly inconsistent, it seems that one of them must be rejected.
+This is puzzling because (1)-(3) also appear to be individually defensible.
 None of the arguments I have offered are decisive; what have aimed to establish is just that the question of which claim to reject is to a significant degree puzzling.
 And although various researchers have taken one side or another,
 I think it's fair to say that no one has yet succeeded in resolving the puzzle.
 
 
-\section{How to resolve the puzzle}
+\section{Distinguishing implicit and explicit isn't enough}
+Could we resolve the puzzle by distinguishing between implicit and explicit representations of false belief?
+Given such a distinction we could remove the contradiction by making the following modifications:
+%
+\begin{quote}
+\begin{description}
+\item[1$'$.] Infants can represent false beliefs \emph{implicitly} from around their first birthday or earlier. \label{infant_fb_prime}
+
+\item[2$'$.] Being able to represent false beliefs \emph{explicitly}  involves being able to  (i) process perspective differences or (ii) reason counterfactually (or both). \label{fb_is_perspectives_prime}
+
+\item[3$'$.] Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are at least one year old.  \label{infant_perspectives}
+\end{description}
+\end{quote}
+%
+When the primary measure of early false belief understanding was  looking times or anticipatory eye movements, this seemed promising \citep{Clements:1994cw,Clements:2000nc,Garnham:2001ql,Ruffman:2001ng}.
+However, as already mentioned, we now know that one-year-old infants succeed on false belief tasks which involve actively helping others, interpreting their utterances and pointing to provide information \citep{en_1783,Knudsen:2011fk,southgate:2010fb},
+and that older children still fail some nonverbal false belief tasks \citep{Call:1999co}.
+All other things being equal, it would be natural to suppose that success on these sorts of task reflects explicit representations of false belief.
+Certainly we lack a theoretically coherent and independently empirically motivated account of the distinction between implicit and explicit representation that associates exactly those tasks infants succeed on (strictly: Category B tasks) with implicit representations of false belief.
+So we don't know that distinguishing implicit from explicit representations does enable us to avoid contradiction.
+
+Of course I am not denying that, considered as a purely formal move, distinguishing between implicit and explicit representations could in principle enable us to avoid contradiction.
+The problem is to understand what this distinction amounts to clearly enough to explain the existing data and generate novel predictions \citep[p.\ 154]{Apperly:2010kx}.
+
+
+
+
+\section{How to resolve the puzzle: first step}
+\label{sec:first_step}
+
+I can't fully resolve the puzzle but I do think we can make some progress towards resolving it.  
+This section describes the first of two steps towards resolution.
+
+Let me start with an observation.
+When philosophers discuss what belief is, they generally disagree.
+They disagree about what sorts of contents beliefs have (for instance about whether their contents are propositional or map-like), 
+about which norms and causal roles characterise the attitude of believing (for instance about whether part of being a belief is being a state that ought to be true) 
+and about what it is for a belief to be true or false (for instance about whether truth or falsity is merely a matter of the belief's value as a guide to action).
+But when researchers focus on representing belief, it seems that no notice is taken of these disagreements.
+I think this is a mistake.
+Different views on what belief is are related to different accounts of what it is to represent belief.
+After all, what is involved in accurately representing a false belief depends in part on what a belief is and what it is for a belief to be false.
+
+A second observation is that there is no a priori reason to assume that all subjects who represent beliefs represent them with perfect accuracy.
+Suppose, just for the sake of argument, that beliefs are relations to full-blown Fregean propositions.
+A particular subject might nevertheless  represent beliefs as  relations to mere singular propositions.
+This subject's abilities to track others' beliefs, and to predict their actions, would be limited in various ways \citep{Salmon:1986fk}.
+But despite these limits, having such an ability to represent beliefs may still be useful in a wide range of everyday circumstances.
+In fact, in many cases this subject might be indistinguishable from another subject with a more accurate conception of belief.
+An analogy may help \citep[this is based on][]{matthews:2007_measure}.
+There are various ways to represent the efficiency of your car.
+If you were very exact, you might use a measure relating force to fuel consumption.
+But many people will instead measure distance in relation to fuel consumption,
+or even just fuel consumption in relation to periods of time (perhaps monthly).
+The point is that we have different ways of representing (measuring) efficiency.
+Some of these are highly flexible in the sense that they can cope with variations in landscape and even gravity but they are also more costly to implement in terms of the time and background knowledge they demand;
+while others are less costly to implement but also more limited in the sense that they only work in a more limited range of circumstances (perhaps only when the car is used in roughly the same way each month).
+What I am suggesting is that there is a parallel for representing (measuring) belief.
+On rich conceptions of belief, accurately representing belief will enable one to make fine-grained distinctions and to track complex contents, and this will demand conceptual sophistication and impose cognitive demands.
+On other, simpler conceptions of belief, accurately representing belief will yield less flexibility in distinguishing what others belief and in predicting their actions but the reduced flexibility in greater cognitive efficiency.
+
+Whatever belief actually is, 
+there may be multiple ways of representing it,
+just as there are multiple ways of measuring fuel efficiency.
+Different ways of representing belief will vary in how flexible they are and how demanding they are to implement.
+
+Saying that a subject can represent beliefs is like saying that she can represent fuel efficiency.
+It leaves open the question of how she represents beliefs.
+For instance, does she represent the contents of beliefs as simple tuples, as propositions of some kind, as images or maps, or what?
+The answer may vary for different subjects.
+And of course a single subject may use multiple ways of representing beliefs in different contexts (much as a single subject might rely on different ways of measuring fuel efficiency in different contexts).
+It is striking that almost no research has directly addressed the issue of how beliefs are represented in infants, children or adults.
+
+At this point it is perhaps tempting to suppose that we already have everything we need to resolve the puzzle.
+The idea would be this:
+%
+\begin{quote}
+\begin{description}
+\item[1$''$.] Infants can represent false beliefs \emph{using a comparatively simple measure} from around their first birthday or earlier.
+%
+\item[2$''$.] Being able to represent false beliefs \emph{using a comparatively sophisticated measure}  involves being able to  (i) process perspective differences or (ii) reason counterfactually (or both). 
+%
+\item[3$''$.] Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are at least one year old.  
+\end{description}
+\end{quote}
+%
+I think all these claims are true, and with Ian Apperly I have developed in detail a conjecture about the comparatively simple measure infants and others may use in representing beliefs \citep{butterfill_minimal}.
+It turns out that different measures of belief generate testable and novel predictions about the limits of subjects' abilities to track beliefs, so although we haven't tested the conjecture yet it is a testable conjecture.
+
+But although this is my view and I stand by it, I don't think it resolves the puzzle all by itself.
+The problem is this.
+Success on many standard false belief tasks in Category A is in principle possible using only a very simple measure for representing beliefs.
+Further, Category A tasks do not seem to differ from Category B tasks with respect to which measures for representing beliefs could in principle explain success on these tasks.
+So the view raises and does not answer the question of why children continue to systematically fail false belief tasks in Category A years after they can pass false belief tasks in Category B.
+
+
+
+\section{How to resolve the puzzle: second step}
+
+Here is another observation.
+In many domains it is widely recognised that patterns of performance in human subjects are best explained on the hypothesis that multiple representational systems are involved.
+This is true for representations of faces \citep{Morton:1991lr},
+of phonemes 
+and
+of causes \citep{Butterfill:2009vs}, 
+for instance.
+It is also true for representations of number \citep[e.g.][]{feigenson_tracking_2003}, agency and space \citep{Carey:1996hl}.
+In these domains and others, it seems we have to distinguish  
+	representations that paradigmatically feature in reflective thought and talk 
+from
+	representations that feature in modules or core systems.
+These modules are typically functional early in development and throughout most of the life course, 
+make few or no demands on scarce cognitive resources like working memory,
+and are limited and inflexible with respect to the information they can process and output.
+
+There are some striking parallels between patterns of performance which seem to license distinguishing multiple systems for representing number 
+and 
+patterns of performance in the case of reasoning about false beliefs and mental states more generally \citep{Apperly:2009ju}.
+This suggests that, in humans at least, representations of belief may feature in multiple cognitive systems.
+
+When a subject performing a task is described as representing a number or a belief, 
+this leaves open which system is involved.
+Is it a relatively efficient system or one that places demands on working memory or inhibitory control?  
+When does the system appear in development?
+In short, descriptions of subjects as representing beliefs need to be relativised in a second way.
+They need to be relativised not just to  a measurement scheme (see section \vref{sec:first_step}) but also to a system.
+
+The two kinds of relativisation---to a measurement scheme and to a system---are plausibly related.
+A representational system can only be cognitively efficient by avoiding sophisticated measurement schemes, which will result in limits on flexibility;
+equally, a representational system can only achieve flexibility in representing beliefs by implementing a sophisticated measurement scheme, and this will plausibly impose cognitive overheads in many situations.
+
+So here is a final refinement of the claims which make up the puzzle that I started with:
+%
+\begin{quote}
+\begin{description}
+\item[1$'''$.] Infants can represent false beliefs \emph{using a comparatively simple measure} and \emph{in a modular process} from around their first birthday or earlier.
+%
+\item[2$'''$.] Being able to represent false beliefs \emph{using a comparatively sophisticated measure} and  \emph{in a non-modular process}  involves being able to  (i) process perspective differences or (ii) reason counterfactually (or both). 
+%
+\item[3$'''$.] Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are at least one year old.  
+\end{description}
+\end{quote}
+%
+At this point the claims are no longer contradictory.
+But it remains an open question whether we now have all the ingredients necessary to explain both early success on Category B false belief tasks and late failure on Category A tasks or whether  some further complexity in the notion of representing belief also needs to be added to the mix.\footnote{
+\citet[p.\ 155-6]{Apperly:2010kx} appears to suggest a solution additionally involving egocentric bias, but I'm not yet fully convinced.
+}
+
+
+
+\section{Conclusion}
+In conclusion,
+I have argued that  Eva's and Matthias' findings generate a puzzle  resolving which may require confronting the question, What is a representation of belief?
+
+
+
+
+
+
+
+
+
+
 
 
 
 \bibliography{$HOME/endnote/phd_biblio_en_record_num_keys}
 
 \end{document}
+
