--- a/conf joint action --- sharing goals vs sharing intentions cambridge 2012 talk/intention and motor representation in joint action.tex
+++ b/conf joint action --- sharing goals vs sharing intentions cambridge 2012 talk/intention and motor representation in joint action.tex
@@ -6,8 +6,8 @@
 \documentclass[12pt,\papersize]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
 
-\def \ititle {Intention and motor representation:}
-\def \isubtitle {how to resist temptation}
+\def \ititle {Intention and Motor Representation in Joint Action}
+\def \isubtitle {}
 \def \iauthor {S. Butterfill* \& C. Sinigaglia**
 \\ 
 **Department of Philosophy, University of Warwick
