--- a/intention motor representation with corrado sinigaglia/FORMAT SECTION WIP intention and motor action.tex
+++ b/intention motor representation with corrado sinigaglia/FORMAT SECTION WIP intention and motor action.tex
@@ -34,6 +34,7 @@
 
 \tolerance=5000
 
+
 \section{A motor format for representation}
 
 The second temptation is to suppose that motor representation, or some species of it, is a variety of intention, where intention is understood in the standard way as a propositional attitude with a characteristic role in practical reasoning \citep{Bratman:1987xw}. In this section we explain why this temptation should also be resisted. 
@@ -57,22 +58,12 @@ The comparison we intend is between imagining moving a ball in the former, pheno
 
 The fact that motor representation is involved in one way of imagining acting means that we can use imagining acting to investigate the format of motor representations. This enables us to examine characteristics of processes involving motor representation which are are not a direct consequence of limits on agents' abilities to act.
 
-Differences in processing profile provide reasons to distinguish the formats of visual and motor representations. To see why, contrast the way of imagining seeing that is phenomenologically something like seeing with the way of imagining action that is phenomenologically something like acting. To make things concrete, contrast imagining seeing a ball rotating with imagining rotating a ball.%
+Differences in processing profile provide reasons to distinguish the formats of visual and motor representations. To see why, contrast the way of imagining seeing that is phenomenologically something like seeing with the way of imagining acting that is phenomenologically something like acting. To make things concrete, contrast imagining seeing a ball rotating with imagining rotating a ball.%
 \footnote{It may be difficult in practice to imagine acting without also imagining seeing, and conversely; it may also sometimes be difficult to distinguish imagine acting from imagining seeing \citep[as][p.\ 170 note]{currie:1997_mental}. However ordinary subjects can separate the two well enough to confirm predictions about their differences \citep[see, e.g.,][]{kosslyn:2001_imagining}.
 }
-We know that the way imagining acting unfolds in time is quite different from the way imagining seeing unfolds because, as already mentioned, how quickly the former can be done is a function of how long it would take the agent to rotate the ball, whereas how quickly the latter can be done depends on at how rapidly the ball can rotate and still be perceived as rotating. Similarly, factors making actually acting more effortful also make imagining acting more effortful whereas such factors are unlikely to affect the effort involved in imagining seeing. The explanation for these differences in characteristic processing profile between imagining acting and imagining seeing plausibly involves a difference in the formats of the representations involved. That the two involve different representational formats is consistent with  evidence that these two imaginings also involve different processes \citep{kosslyn:2001_imagining}. For instance, each can be selectively impaired \citep{sirigu:2011_motor}; and factors such as limb amputation or hand posture can selectively interfere with imagining performing an action \citep{nico:2004_left, vargas:2004s_influence,  fourkas:2006_influence}. 
+We know that the way imagining acting unfolds in time is quite different from the way imagining seeing unfolds because, as already mentioned, how quickly the former can be done is a function of how long it would take the agent to rotate the ball, whereas how quickly the latter can be done depends on how rapidly the ball can rotate and still be perceived as rotating. Similarly, we mentioned that factors making actually acting more effortful also make imagining acting more effortful: such factors are unlikely to affect the effort involved in imagining seeing. The explanation for these differences in characteristic processing profile between imagining acting and imagining seeing plausibly involves a difference in the formats of the representations involved. That the two involve different representational formats is consistent with  evidence that these two imaginings also involve different processes \citep{kosslyn:2001_imagining}. For instance, each can be selectively impaired \citep{sirigu:2011_motor}; and factors such as limb amputation or hand posture can selectively interfere with imagining performing an action \citep{nico:2004_left, vargas:2004s_influence,  fourkas:2006_influence}. 
 
-***HERE***
-
-In principle someone might attempt to explain differences in characteristic processing profile between imagining seeing a ball move and imagining moving the ball by appeal to differences in what is imagined rather than in format. We do not dispute that some differences might be explained by the fact that an action is being imagined in one case only.  But could this fully explain differences in characteristic processing profile?  To see that it could not, note that there are limits on what one can imagine doing which are not limits on what one can imagined seeing being done.  For instance, an agent that cannot bark/reach the ceiling will be unable to imagine---in the way of imagining that is phenomenologically action-like---barking/reaching the ceiling, but will of course be able to imagine seeing and hearing herself barking/reaching the ceiling.  The limits cannot be explained by differences in what is imagined but must be explained by differences in representational format.  ***does this work?
-
-*** OR contrast imagine seeing an action vs. imagining performing an action. 
-I.e. need same thing represented, once in motor and once in perceptual format.  If there are limits on specifically motor representation, these cannot be explained by content alone; but they can be explained by format.
-
-*** Conson et al 2010
-
-
-***NEXT : show that motor representation is not propositional in format.
+But are we too hasty in drawing this conclusion? It might be supposed that imagining seeing a ball rotating differs from imagining moving a ball with respect to the contents involved---after all, one involves an action, the other does not. In principle someone might attempt to explain differences in characteristic processing profile between imagining seeing a ball move and imagining moving the ball by appeal to differences in content rather than in format. We do not dispute that \emph{some} differences might be explained in this way. But could any differences in content fully explain differences in characteristic processing profile? To see why not, consider a further case. Ordinary subjects who are asked to judged the laterality of a hand rotated to various degrees are slower and less accurate when the hand's position is maximally biomechanically awkward (rotated 180 degrees, middle finger pointing down). By contrast, no such effect occurs for comparable tasks involving letters rather than hands. This difference in performance has been explained by appeal to the hypothesis that the hand task involves the phenomenologically action-like form of imagination whereas the letter task involves sensory visual imagination (**ref).  But could this performance difference instead be explained by a difference in content (one task involves representing hands, the other letters)? Subjects with Amyotrophic Lateral Sclerosis (ALS) which impairs motor representation retain the ability to judge the laterality of hands (and letters) but their performance is unaffected by whether the hand is presented in a biomechanically awkward position \citep{Fiori:2012fk}. The difference between these subjects and ordinary, control subjects is not plausibly a matter of content since both are representing rotated hands; rather, the difference in the processing profile of their laterality judgements is plausibly a reflection of a difference in the formats in which they represent hands. This is why we hold that some differences between imagining seeing and imagining acting indicate differences in representational format. 
 
 -----------------------------
 
